--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
   - "2.7"
   - "3.3"
   - "3.4"
-install: pip install flask speaklater six
+install: pip install flask speaklater
 script: python setup.py test
