--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,18 @@ python:
   - "2.7"
   - "3.3"
   - "3.4"
-install: pip install flask speaklater
-script: python setup.py test
+env:
+  - FLASK=0.8
+  - FLASK=0.9
+  - FLASK=0.10
+install:
+  - pip install Flask==$FLASK
+  - pip install speaklater
+script: nosetests test_json
+matrix:
+  exclude:
+    # These do not support Python 3 yet.
+    - python: 3.3
+      env: FLASK=0.8
+    - python: 3.3
+      env: FLASK=0.9
