--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,11 @@ install:
 script: nosetests test_json
 matrix:
   exclude:
-    # These do not support Python 3 yet.
-    - python: 3.3
+    - python: "3.3"
       env: FLASK=0.8
-    - python: 3.3
+    - python: "3.3"
+      env: FLASK=0.9
+    - python: "3.4"
+      env: FLASK=0.8
+    - python: "3.4"
       env: FLASK=0.9
