--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,7 @@ env:
   - FLASK=0.10.1 speaklater
 install:
   - pip install Flask==$FLASK
+  - pip install flake8
+before_script:
+ - flake8 flask_json.py
 script: nosetests
