--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
-[nosetests]
-detailed-errors=1
-with-coverage=1
-cover-erase=1
-cover-package=flask_json
+[aliases]
+test=pytest
+
+[tool:pytest]
+addopts = --cov-report term-missing --cov=flask_json
