--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ env:
   - FLASK=0.10.1
   - FLASK=0.10 speaklater
   - FLASK=0.10.1 speaklater
+  - FLASK=0.11
+  - FLASK=0.11.1
 install:
   - pip install Flask==$FLASK
-  - pip install pep8
+  - pip install pycodestyle
 before_script:
- - pep8 flask_json.py
-script: nosetests
+ - pycodestyle flask_json.py
+script: py.test
