--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,34}-flask{10,10.1,11,11.1}-{spk,nospk}
+envlist = py{26,27,34,35,36}-flask{10,10.1,11,11.1,11.2,12,12.1,12.2}-{spk,nospk}
 
 [testenv]
 commands = py.test
@@ -9,4 +9,7 @@ deps = pytest
        flask10.1: Flask==0.10.1
        flask11: Flask==0.11
        flask11.1: Flask==0.11.1
+       flask12: Flask==0.12
+       flask12.1: Flask==0.12.1
+       flask12.2: Flask==0.12.2
        spk: speaklater
