Add missing dependency

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps = pytest
        flask10.1: Flask==0.10.1
        flask11: Flask==0.11
        flask11.1: Flask==0.11.1
+       flask11.2: Flask==0.11.2
        flask12: Flask==0.12
        flask12.1: Flask==0.12.1
        flask12.2: Flask==0.12.2
