Remove extra quoting in bumpversion commit msg

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,7 +2,7 @@
 current_version = 0.3.2
 commit = True
 tag = False
-message = "Bump version to {new_version}"
+message = Bump version to {new_version}
 
 [bumpversion:file:flask_json.py]
 search = __version__ = '{current_version}'
