--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,18 @@
 [tox]
-envlist = py{26,27,34,35,36}-flask{10,10.1,11,11.1,12,12.1,12.2}-{spk,nospk}
+envlist = py{26,27,34,35,36}-flask{0.10,0.10.1,0.11,0.11.1,0.12,0.12.1,0.12.2}-{spk,nospk}, py{27,34,35,36}-flask{1.0,1.0.1,1.0.2}-{spk,nospk}
 
 [testenv]
 commands = py.test
 deps = pytest
        pytest-cov
-       flask10: Flask==0.10
-       flask10.1: Flask==0.10.1
-       flask11: Flask==0.11
-       flask11.1: Flask==0.11.1
-       flask12: Flask==0.12
-       flask12.1: Flask==0.12.1
-       flask12.2: Flask==0.12.2
+       flask0.10: Flask==0.10
+       flask0.10.1: Flask==0.10.1
+       flask0.11: Flask==0.11
+       flask0.11.1: Flask==0.11.1
+       flask0.12: Flask==0.12
+       flask0.12.1: Flask==0.12.1
+       flask0.12.2: Flask==0.12.2
+       flask1.0: Flask==1.0
+       flask1.0.1: Flask==1.0.1
+       flask1.0.2: Flask==1.0.2
        spk: speaklater
