--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
   - FLASK=0.12.2
 install:
   - pip install Flask==$FLASK
-  - pip install pycodestyle pytest pytest-cov
+  - pip install pycodestyle==2.5.0 pytest==3.0.3 pytest-cov==2.3.1
 before_script:
  - pycodestyle flask_json.py
 script: py.test
