--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,8 @@ envlist = py{26,27,34,35,36}-flask{0.10,0.10.1,0.11,0.11.1,0.12,0.12.1,0.12.2}-{
 
 [testenv]
 commands = py.test
-deps = pytest
-       pytest-cov
+deps = pytest==3.0.3
+       pytest-cov==2.3.1
        flask0.10: Flask==0.10
        flask0.10.1: Flask==0.10.1
        flask0.11: Flask==0.11
