Remove py26 and py34, add py37 and py38

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{26,27,34,35,36}-flask{0.10,0.10.1,0.11,0.11.1,0.12,0.12.1,0.12.2}-{spk,nospk}, py{27,34,35,36}-flask{1.0,1.0.1,1.0.2}-{spk,nospk}
+envlist = py{27,35,36,37,38}-flask{0.10,0.10.1,0.11,0.11.1,0.12,0.12.1,0.12.2}-{spk,nospk}, py{35,36,37,38}-flask{1.0,1.0.1,1.0.2}-{spk,nospk}
 
 [testenv]
 commands = py.test
@@ -16,3 +16,5 @@ deps = pytest==3.0.3
        flask1.0.1: Flask==1.0.1
        flask1.0.2: Flask==1.0.2
        spk: speaklater
+setenv =
+       PYTHONPATH={toxinidir}/tests
