--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,35,36,37,38}-flask{0.10,0.10.1,0.11,0.11.1,0.12,0.12.1,0.12.2}-{spk,nospk}, py{35,36,37,38}-flask{1.0,1.0.1,1.0.2}-{spk,nospk}
+envlist = py{27,35,36,37,38}-flask{0.10,0.10.1,0.11,0.11.1,0.12,0.12.1,0.12.2,1.1.1}-{spk,nospk}, py{35,36,37,38}-flask{1.0,1.0.1,1.0.2,1.1.1}-{spk,nospk}
 
 [testenv]
 commands = py.test
@@ -15,6 +15,7 @@ deps = pytest==3.0.3
        flask1.0: Flask==1.0
        flask1.0.1: Flask==1.0.1
        flask1.0.2: Flask==1.0.2
+       flask1.1.1: Flask==1.1.1
        spk: speaklater
 setenv =
        PYTHONPATH={toxinidir}/tests
