Replace travis with gh actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,26 @@
 [tox]
-envlist = py{27,35,36,37,38}-flask{0.10,0.10.1,0.11,0.11.1,0.12,0.12.1,0.12.2,1.1.1}-{spk,nospk}, py{35,36,37,38}-flask{1.0,1.0.1,1.0.2,1.1.1}-{spk,nospk}
+envlist = py27-flask0.12.5-{spk,nospk}, py{36,37,38,310}-flask{1.1.4, 2.0.3}-{spk,nospk}, py{37,38,310}-flask{2.1.3, 2.2.2}-{spk,nospk}
 
+[gh-actions]
+python =
+    2.7: py27
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.10: py310
+
+# https://github.com/pallets/flask/issues/2549#issuecomment-583377526
 [testenv]
-commands = py.test
-deps = pytest==3.0.3
-       pytest-cov==2.3.1
-       flask0.10: Flask==0.10
-       flask0.10.1: Flask==0.10.1
-       flask0.11: Flask==0.11
-       flask0.11.1: Flask==0.11.1
-       flask0.12: Flask==0.12
-       flask0.12.1: Flask==0.12.1
-       flask0.12.2: Flask==0.12.2
-       flask1.0: Flask==1.0
-       flask1.0.1: Flask==1.0.1
-       flask1.0.2: Flask==1.0.2
-       flask1.1.1: Flask==1.1.1
+deps = pytest==4.6.2
+       pytest-cov==2.11.0
+       flask0.12.5: Flask==0.12.5
+       flask0.12.5: werkzeug<1
+       flask1.1.4: Flask==1.1.4
+       flask1.1.4: markupsafe==2.0.1
+       flask2.0.3: Flask==2.0.3
+       flask2.1.3: Flask==2.1.3
+       flask2.2.2: Flask==2.2.2
        spk: speaklater
 setenv =
        PYTHONPATH={toxinidir}/tests
+commands = pytest
