--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,19 @@
 [tox]
-envlist = py27-flask0.12.5-{spk,nospk}, py{36,37,38,310}-flask{1.1.4, 2.0.3}-{spk,nospk}, py{37,38,310}-flask{2.1.3, 2.2.2}-{spk,nospk}
+envlist = py{37,38,310}-flask{2.2.0, 2.2.2}-{spk,nospk}
 
 [gh-actions]
 python =
-    2.7: py27
-    3.6: py36
     3.7: py37
     3.8: py38
     3.10: py310
 
 # https://github.com/pallets/flask/issues/2549#issuecomment-583377526
 [testenv]
-deps = pytest==4.6.2
-       pytest-cov==2.11.0
-       flask0.12.5: Flask==0.12.5
-       flask0.12.5: werkzeug<1
-       flask1.1.4: Flask==1.1.4
-       flask1.1.4: markupsafe==2.0.1
-       flask2.0.3: Flask==2.0.3
-       flask2.1.3: Flask==2.1.3
+deps = pytest==7.2.0
+       pytest-cov==4.0.0
+       flask2.2.0: Flask==2.2.0
        flask2.2.2: Flask==2.2.2
        spk: speaklater
 setenv =
        PYTHONPATH={toxinidir}/tests
-commands = pytest
+commands = pytest tests --cov
