--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,6 +4,6 @@ commit = True
 tag = False
 message = Bump version to {new_version}
 
-[bumpversion:file:flask_json.py]
+[bumpversion:file:src/flask_json.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
