Update tox config

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37,38,310}-flask{2.2.0, 2.2.2}-{spk,nospk}
+envlist = py{37,38,310}-flask{2.2.0, 2.2.5}-{spk,nospk},py{38,310}-flask{2.3.0,2.3.2}-{spk,nospk}
 
 [gh-actions]
 python =
@@ -12,8 +12,10 @@ python =
 deps = pytest==7.2.0
        pytest-cov==4.0.0
        flask2.2.0: Flask==2.2.0
-       flask2.2.2: Flask==2.2.2
+       flask2.2.5: Flask==2.2.5
+       flask2.3.0: Flask==2.3.0
+       flask2.3.2: Flask==2.3.2
        spk: speaklater
 setenv =
        PYTHONPATH={toxinidir}/tests
-commands = pytest tests --cov
+commands = pytest --cov flask_json tests
