--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['2.7', '3.6', '3.7', '3.8']
+        python-version: ['3.7', '3.8', '3.10']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -26,6 +26,5 @@ jobs:
       - run: |
           python -m pip install -U pip
           pip install -U wheel setuptools
-      - run: pip install pycodestyle tox==3.27.1 tox-gh-actions
-      - run: pycodestyle flask_json.py
+      - run: pip install tox==3.27.1 tox-gh-actions
       - run: tox
